Add header, burger menu, welcome-page, jumbotrone

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,4 +1,27 @@
 @import config
 
-// CUSTOM USER STYLES & IMPORTS
+//welcome-page
+.welcome-page
+  background: linear-gradient(to bottom, rgba(30, 94, 155, .85) 0%, rgba(255, 255, 255, .1) 100%),url("/images/dest/welcome-image.png") no-repeat bottom center fixed
+  background-size: cover
+  height: 100vh
 
+header
+  background:  linear-gradient( rgba(30, 94, 155, 0.5), rgba(30, 94, 155, 0.5) ), url("/images/dest/top-bg.png") repeat-x
+  background-size: 100%
+  .navbar-brand
+    padding: 5px
+    width: 30%
+    img
+      width: 100%
+.about
+  height: 10000px
+
+.vertical-center
+  min-height: 100vh
+  display: flex
+  align-items: center
+
+.jumbotron-fluid
+  h1
+    color: #fff
