--- a/app/sass/_config.sass
+++ b/app/sass/_config.sass
@@ -2,8 +2,9 @@
 
 @import 'node_modules/bootstrap/scss/bootstrap-reboot.scss' // Bootstrap Reboot collection
 @import 'node_modules/bootstrap/scss/mixins/_breakpoints.scss' // Bootstrap Breakpoints mixin
-// @import 'node_modules/bootstrap/scss/bootstrap-grid.scss' // Optional Bootstrap Grid
-// @import 'node_modules/bootstrap/scss/utilities/_sizing.scss' // Optional Bootstrap Utilites
+@import 'node_modules/bootstrap/scss/bootstrap-grid.scss' // Optional Bootstrap Grid
+@import 'node_modules/bootstrap/scss/utilities/_sizing.scss' // Optional Bootstrap Utilites
+@import 'node_modules/bootstrap/scss/bootstrap.scss' // Optional Bootstrap Utilites
 
 
 // USER VARIABLES SECTION
@@ -12,7 +13,7 @@ $accent: orange // Accent Color
 $fontsize: 16px // Body Font Size
 $textcolor: #333 // Text Color
 $system: -apple-system, BlinkMacSystemFont, Arial, sans-serif // System Font Family
-$roboto: Roboto, sans-serif // Roboto Font Family
+$robotoslab: RobotoSlab, sans-serif // RobotoSlab Font Family
 
 // Bootstrap compatible gutter variable => $gutter
 
@@ -35,7 +36,7 @@ $gutter: $grid-gutter-width
 @include font('Roboto', italic, 400, '../fonts/roboto-italic-webfont.woff2')
 @include font('Roboto', normal, 700, '../fonts/roboto-bold-webfont.woff2')
 @include font('Roboto', italic, 700, '../fonts/roboto-bolditalic-webfont.woff2')
-
+@include font('RobotoSlab', normal, 700, '../fonts/robotoslab-bold-webfont.woff2')
 
 // GENERAL DOCUMENT STYLES
 
@@ -54,7 +55,7 @@ input, textarea
 		border-color: green
 
 body
-	font-family: $roboto
+	font-family: $robotoslab
 	font-size: $fontsize
 	min-width: 320px
 	position: relative
