--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,20 +2,22 @@
 
 //welcome-page
 .welcome-page
-  background: linear-gradient(to bottom, rgba(30, 94, 155, .85) 0%, rgba(255, 255, 255, .1) 100%),url("/images/dest/welcome-image.png") no-repeat bottom center fixed
+  background: linear-gradient(to bottom, rgba(30, 94, 155, .85) 0%, rgba(255, 255, 255, .1) 100%),url("/images/dest/welcome-image.png") no-repeat bottom center
   background-size: cover
   height: 100vh
+  position: relative
 
 header
-  background:  linear-gradient( rgba(30, 94, 155, 0.5), rgba(30, 94, 155, 0.5) ), url("/images/dest/top-bg.png") repeat-x
-  background-size: 100%
+
   .navbar-brand
     padding: 5px
-    width: 30%
+    width: 13rem
     img
       width: 100%
-.about
-  height: 10000px
+
+.navbar-toggler:focus, .navbar-toggler:hover
+    outline: none !important
+    box-shadow: none
 
 .vertical-center
   min-height: 100vh
@@ -23,5 +25,54 @@ header
   align-items: center
 
 .jumbotron-fluid
+  margin-top: 150px
   h1
     color: #fff
+
+.about
+  height: 10000px
+.navbar
+  background:  linear-gradient( rgba(30, 94, 155, 0.5), rgba(30, 94, 155, 0.5) ), url("/images/dest/top-bg.png") repeat-x
+  background-size: cover
+  position: absolute
+  left: 0
+  right: 0
+  z-index: 5
+.header-h1 h1
+  position: relative
+  padding-bottom: 1rem
+  font-size: 2.5rem
+  text-transform: uppercase
+
+  &::before
+    content: ""
+    position: absolute
+    border-bottom: 2px solid #fff
+    bottom: .5rem
+    left: 50%
+    width: 30%
+    transform: translateX(-50%)
+
+  &::after
+    content: ""
+    position: absolute
+    border-bottom: 2px solid #fff
+    bottom: 0
+    left: 50%
+    width: 15%
+    transform: translateX(-50%)
+
+.header-h1-left h1
+  text-align: left
+
+  &::before, &::after
+    left: 0
+    transform: translateX(0)
+
+.header-h1-right h1
+  text-align: right
+
+  &::before, &::after
+    left: unset
+    right: 0
+    transform: translateX(0)
