--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -49,7 +49,7 @@ header
   &::before
     content: ""
     position: absolute
-    border-bottom: 2px solid #fff
+    border-bottom: 2px solid #ED2B2A
     bottom: .5rem
     left: 50%
     width: 30%
@@ -58,8 +58,13 @@ header
   &::after
     content: ""
     position: absolute
-    border-bottom: 2px solid #fff
+    border-bottom: 2px solid #ED2B2A
     bottom: 0
     left: 50%
     width: 15%
     transform: translateX(-50%)
+.about
+  background: yellow
+.contacts
+  background: green
+  height: 600px
