--- a/app/sass/_config.sass
+++ b/app/sass/_config.sass
@@ -13,7 +13,7 @@ $accent: orange // Accent Color
 $fontsize: 16px // Body Font Size
 $textcolor: #333 // Text Color
 $system: -apple-system, BlinkMacSystemFont, Arial, sans-serif // System Font Family
-$robotoslab: RobotoSlab, sans-serif // RobotoSlab Font Family
+$robotoslab: Robotoslab, serif // RobotoSlab Font Family
 
 // Bootstrap compatible gutter variable => $gutter
 
@@ -36,7 +36,7 @@ $gutter: $grid-gutter-width
 @include font('Roboto', italic, 400, '../fonts/roboto-italic-webfont.woff2')
 @include font('Roboto', normal, 700, '../fonts/roboto-bold-webfont.woff2')
 @include font('Roboto', italic, 700, '../fonts/roboto-bolditalic-webfont.woff2')
-@include font('RobotoSlab', normal, 700, '../fonts/robotoslab-bold-webfont.woff2')
+@include font('Robotoslab', normal, 700, '../fonts/robotoslab-bold-webfont.woff2')
 
 // GENERAL DOCUMENT STYLES
 
