--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -41,7 +41,8 @@ header, footer
   right: 0
   z-index: 5
   text-transform: uppercase
-
+.jumbotron-text
+  margin-bottom: 30px
 .header-h1 h1, .h2
   position: relative
   padding-bottom: 1rem
@@ -101,16 +102,19 @@ header, footer
 //services section
 
 .services
-  background: linear-gradient(to bottom, rgba(255, 255, 255, .1) 0%, rgba(30, 94, 155, .7) 100%)
+  background: linear-gradient(to bottom, rgba(255, 255, 255, .1) 0%, rgba(30, 94, 155, .8) 70%)
 .services-item
   img
-    opacity: 0.3
+    opacity: 0.5
 .services-info
+  //color: #0f6674
   position: absolute
   text-align: center
   top: 50%
   left: 50%
   transform: translate(-50%, -50%)
+  p
+    color: #fff
 
 
 .gallery
@@ -139,6 +143,7 @@ header, footer
         left: 0
 
       &-info
+        color: #fff
         text-align: center
         display: none
         position: absolute
@@ -200,3 +205,16 @@ footer
 @media (min-width: 1200px)
   .contacts-list
     padding-left: 100px
+
+@media (max-width: 770px)
+  .gallery-item a
+    pointer-events: none !important
+
+@media (max-width: 600px)
+  .header-h1
+    h1
+      font-size: 2rem
+  .welcome-page p
+    font-size: 0.9rem
+  .about-items .about-item
+    margin: 7px 5px
