--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -103,9 +103,13 @@ header, footer
 
 .services
   background: linear-gradient(to bottom, rgba(255, 255, 255, .1) 0%, rgba(30, 94, 155, .8) 70%)
+  &-overlay-img
+    background-color: rgba(232, 69, 69, 0.9)
 .services-item
+
   img
     opacity: 0.5
+
 .services-info
   //color: #0f6674
   position: absolute
@@ -115,7 +119,6 @@ header, footer
   transform: translate(-50%, -50%)
   p
     color: #fff
-
 
 .gallery
   ul
