Added services images

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -74,7 +74,7 @@ header, footer
   text-shadow: 0 0 5px #1E5E9B
 
 .about
-  background: linear-gradient(to bottom, rgba(255, 255, 255, .1) 0%, rgba(30, 94, 155, .7) 100%),url("/images/dest/bus-about.jpg") no-repeat center center
+  background: linear-gradient(to bottom, rgba(255, 255, 255, .4) 0%, rgba(255, 255, 255, .7) 100%),url("/images/dest/bus-about.jpg") no-repeat center center
   background-size: cover
   height: 100%
   p
@@ -104,14 +104,13 @@ header, footer
 .services
   background: linear-gradient(to bottom, rgba(255, 255, 255, .1) 0%, rgba(30, 94, 155, .8) 70%)
   &-overlay-img
-    background-color: rgba(232, 69, 69, 0.9)
+    background-color: rgb(15, 102, 116)
 .services-item
-
   img
     opacity: 0.5
 
 .services-info
-  //color: #0f6674
+  font-size: 1.3em
   position: absolute
   text-align: center
   top: 50%
@@ -130,7 +129,6 @@ header, footer
       border: 0 solid #fff
       position: relative
       overflow: hidden
-
       img
         transition: all 0.5s ease
         min-height: 100%
