Mini fix: added town, change bus-line

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,7 +2,7 @@
 
 //welcome-page
 .welcome-page
-  background: linear-gradient(to bottom, rgba(30, 94, 155, .7) 0%, rgba(255, 255, 255, .1) 100%),url("/images/dest/welcome-image.png") no-repeat bottom center
+  background: linear-gradient(to bottom, rgba(30, 94, 155, .7) 0%, rgba(255, 255, 255, .1) 100%),url("../images/dest/welcome-image.png") no-repeat bottom center
   background-size: cover
   height: 100vh
   position: relative
@@ -34,7 +34,7 @@ header, footer
   height: 10000px
 
 .navbar
-  background:  linear-gradient( rgba(30, 94, 155, 0.5), rgba(30, 94, 155, 0.5) ), url("/images/dest/top-bg.png") repeat-x
+  background:  linear-gradient( rgba(30, 94, 155, 0.5), rgba(30, 94, 155, 0.5) ), url("../images/dest/top-bg.png") repeat-x
   background-size: cover
   position: absolute
   left: 0
@@ -74,7 +74,7 @@ header, footer
   text-shadow: 0 0 5px #1E5E9B
 
 .about
-  background: linear-gradient(to bottom, rgba(255, 255, 255, .4) 0%, rgba(255, 255, 255, .7) 100%),url("/images/dest/bus-about.jpg") no-repeat center center
+  background: linear-gradient(to bottom, rgba(255, 255, 255, .4) 0%, rgba(255, 255, 255, .7) 100%),url("../images/dest/bus-about.jpg") no-repeat center center
   background-size: cover
   height: 100%
   p
@@ -184,7 +184,7 @@ header, footer
     width: 40px
 
 footer
-  background:  linear-gradient( rgba(30, 94, 155, 0.5), rgba(30, 94, 155, 0.5) ), url("/images/dest/top-bg.png") repeat-x
+  background:  linear-gradient( rgba(30, 94, 155, 0.5), rgba(30, 94, 155, 0.5) ), url("../images/dest/top-bg.png") repeat-x
   background-size: cover
   span
     font-size: 0.7rem
@@ -212,6 +212,8 @@ footer
     pointer-events: none !important
 
 @media (max-width: 600px)
+  .services-info
+    font-size: 0.9em
   .header-h1
     h1
       font-size: 2rem
