--- a/app/sass/_config.sass
+++ b/app/sass/_config.sass
@@ -20,22 +20,22 @@ $robotoslab: 'Roboto Slab', serif // RobotoSlab Font Family
 $grid-gutter-width: 20px
 $gutter: $grid-gutter-width
 
-
-// FONTS LOAD SECTION
-
-@mixin font($fname, $fstyle, $fweight, $furl)
-	@font-face
-		font-family: $fname
-		font-style: $fstyle
-		font-weight: $fweight
-		font-display: swap
-		src: local($fname), url($furl) format('woff2')
-
-
-@include font('Roboto', normal, 400, '../fonts/roboto-regular-webfont.woff2')
-@include font('Roboto', italic, 400, '../fonts/roboto-italic-webfont.woff2')
-@include font('Roboto', normal, 700, '../fonts/roboto-bold-webfont.woff2')
-@include font('Roboto', italic, 700, '../fonts/roboto-bolditalic-webfont.woff2')
+//
+//// FONTS LOAD SECTION
+//
+//@mixin font($fname, $fstyle, $fweight, $furl)
+//	@font-face
+//		font-family: $fname
+//		font-style: $fstyle
+//		font-weight: $fweight
+//		font-display: swap
+//		src: local($fname), url($furl) format('woff2')
+//
+//
+//@include font('Roboto', normal, 400, '../fonts/roboto-regular-webfont.woff2')
+//@include font('Roboto', italic, 400, '../fonts/roboto-italic-webfont.woff2')
+//@include font('Roboto', normal, 700, '../fonts/roboto-bold-webfont.woff2')
+//@include font('Roboto', italic, 700, '../fonts/roboto-bolditalic-webfont.woff2')
 
 // GENERAL DOCUMENT STYLES
 
