Added new logo. Change language in form

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -9,9 +9,9 @@
 
 header, footer
   .navbar-brand
-    width: 10rem
+    width: 14rem
     img
-      width: 70%
+      width: 100%
 
 .navbar-toggler:focus, .navbar-toggler:hover
     outline: none !important
@@ -41,6 +41,7 @@ header, footer
   right: 0
   z-index: 5
   text-transform: uppercase
+  padding: 0.2rem 1rem
 .jumbotron-text
   margin-bottom: 30px
 .header-h1 h1, .h2
@@ -240,3 +241,4 @@ footer
     font-size: 0.9rem
   .about-items .about-item
     margin: 7px 5px
+
